--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
          </div>
       </div>
       <!-- App -->
-      <div class="col-12">
-         <div class="card bg-light mx-auto mt-5">
+      <div class="col">
+         <div class="calculator card bg-light mx-auto mt-5">
             <div class="card-header">
                <p class="h3 text-center">Rezsi - óra számolgató</p>
             </div>
             <div class="card-body">
                <div class="row">
-                  <div class="col-6">
+                  <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
                         <label for="actualElState">Aktuális ELMŰ állás</label>
                         <input type="number" class="form-control" id="actualElState" aria-describedby="emailHelp"
@@ -58,7 +58,7 @@
                                placeholder="">
                      </div>
                   </div>
-                  <div class="col-6">
+                  <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
                         <label for="actualElState">Márciusi ELMŰ állás</label>
                         <input type="number" class="form-control" id="marchElState" aria-describedby="emailHelp"
