--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <div class="modal-dialog" role="document">
             <div class="modal-content">
                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Barbiéknak fizetnük kell:</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Fizetniük kell:</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                      <span aria-hidden="true">&times;</span>
                   </button>
@@ -49,7 +49,7 @@
                      </div>
                      <div class="form-group">
                         <label for="actualGasState">Aktuális Gáz állás</label>
-                        <input type="number" class="form-control" id="actualGasState" aria-describedby="emailHelp"
+                        <input type="number" class="form-control" id="actualGasState" aria-describedby="emmarchElStateailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
