--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <div class="modal-dialog" role="document">
             <div class="modal-content">
                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Fizetniük kell:</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Végelszámolás:</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                      <span aria-hidden="true">&times;</span>
                   </button>
@@ -24,6 +24,7 @@
                   <p id="elResult"></p>
                   <p id="gasResult"></p>
                   <p id="waterCanresult"></p>
+                  <p id="upcResult"></p>
                   <br>
                   <h5 id="sum"></h5>
                </div>
@@ -60,17 +61,17 @@
                   </div>
                   <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
-                        <label for="actualElState">Márciusi ELMŰ állás</label>
+                        <label for="actualElState">Legutolsó ELMŰ állás</label>
                         <input type="number" class="form-control" id="marchElState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualGasState">Márciusi Gáz állás</label>
+                        <label for="actualGasState">Legutolsó Gáz állás</label>
                         <input type="number" class="form-control" id="marchGasState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualWaterCanState">Márciusi Víz állás</label>
+                        <label for="actualWaterCanState">Legutolsó Víz állás</label>
                         <input type="number" class="form-control" id="marchWaterCanState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
