--- a/index.html
+++ b/index.html
@@ -44,34 +44,34 @@
                <div class="row">
                   <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
-                        <label for="actualElState">Aktuális ELMŰ állás</label>
+                        <label for="actualElState">Akt. ELMŰ állás</label>
                         <input type="number" class="form-control" id="actualElState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualGasState">Aktuális Gáz állás</label>
+                        <label for="actualGasState">Akt. Gáz állás</label>
                         <input type="number" class="form-control" id="actualGasState" aria-describedby="emmarchElStateailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualWaterCanState">Aktuális Víz állás</label>
+                        <label for="actualWaterCanState">Akt.Víz állás</label>
                         <input type="number" class="form-control" id="actualWaterCanState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                   </div>
                   <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
-                        <label for="actualElState">Legutolsó ELMŰ állás</label>
+                        <label for="actualElState">Utolsó ELMŰ állás</label>
                         <input type="number" class="form-control" id="marchElState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualGasState">Legutolsó Gáz állás</label>
+                        <label for="actualGasState">Utolsó Gáz állás</label>
                         <input type="number" class="form-control" id="marchGasState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualWaterCanState">Legutolsó Víz állás</label>
+                        <label for="actualWaterCanState">Utolsó Víz állás</label>
                         <input type="number" class="form-control" id="marchWaterCanState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
