--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
                   </div>
                   <div class="col col-6-lg col-2-xs">
                      <div class="form-group">
-                        <label for="actualElState">Utolsó ELMŰ állás</label>
+                        <label for="actualElState">Ut. ELMŰ állás</label>
                         <input type="number" class="form-control" id="marchElState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualGasState">Utolsó Gáz állás</label>
+                        <label for="actualGasState">Ut. Gáz állás</label>
                         <input type="number" class="form-control" id="marchGasState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
                      <div class="form-group">
-                        <label for="actualWaterCanState">Utolsó Víz állás</label>
+                        <label for="actualWaterCanState">Ut. Víz állás</label>
                         <input type="number" class="form-control" id="marchWaterCanState" aria-describedby="emailHelp"
                                placeholder="">
                      </div>
