--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   <p id="elResult"></p>
                   <p id="gasResult"></p>
                   <p id="waterCanresult"></p>
+                  <p id="dumpResult"></p>
                   <br>
                   <h5 id="sum"></h5>
                </div>
@@ -92,6 +93,7 @@
             <p>Elmű: <span id="priceEl"></span> Ft / KW</p>
             <p>Gáz: <span id="priceGas"></span> Ft / m³</p>
             <p>Víz + Csatorna: <span id="priceWaterCan"></span> Ft / m³</p>
+            <p>Szemét arányosan: <span id="priceDump"></span> Ft 12 napra -  (2996 Ft / 12)</p>
          </div>
       </div>
    </div>
