--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
          <div class="text-center">
             <p>Elmű: <span id="priceEl"></span> Ft / KW</p>
             <p>Gáz: <span id="priceGas"></span> Ft / m³</p>
-            <p>Víz + Csatorna: <span id="priceWaterCan"></span> Ft / m³</p>
-            <p>Szemét arányosan: <span id="priceDump"></span> Ft 12 napra -  (2996 Ft / 12)</p>
+            <p>Víz: <span id="priceWater"></span> Ft / m³</p>
+            <p>Csatorna: <span id="priceCan"></span> Ft / m³</p>
+            <p>Szemét arányosan: <span id="priceDump"></span> Ft 12 napra - (2996 Ft / 30) * 12</p>
          </div>
       </div>
    </div>
